# formatura_gio

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
env_files/: .env.example
scripts/: entrypoint.dev.sh
src/core/: settings.py  urls.py
src/rsvp/: admin.py  forms.py  models.py  urls.py  views.py
src/rsvp/migrations/: 0001_initial.py  0002_rsvp_companion_email_rsvp_email.py  0003_alter_rsvp_email.py
src/templates/: base.html
src/templates/rsvp/: index.html  success.html
